@@ -1,3 +1,4 @@
+4/4/12 tweak brackets so they don't get lost behind manipulators, and they look nicer where they meet
 4/4/12 make manipulators slightly larger
 4/4/12 add separator for save/erase buttons
 4/4/12 replace equation with "x = 0" when slope is undefined
